<resources xmlns:xliff="http://schemas.android.com/tools">
    <string name="app_name">My App Portfolio</string>
    <string name="porfolio_label">My Nanodegree Apps!</string>
    <string name="toast_message">This button will launch my<xliff:g id="toast_msg"> %s app!</xliff:g></string>

    <!-- Nanodegree App Names -->
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="make_your_app_material">Make Your App Material</string>
    <string name="go_ubiquitious">Go Ubiquitious</string>
    <string name="capstone">Capstone</string>

</resources>
