<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.beesham.myappportfolio.PorfolioActivity">

    <TextView
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24dp"
        android:text="@string/porfolio_label"
        android:layout_marginBottom="8dp"/>

    <Button
        android:id="@+id/popular_movies"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/stock_hawk"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/make_your_app_material"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_your_app_material"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/go_ubiquitious"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitious"
        android:onClick="onButtonClicked"/>

    <Button
        android:id="@+id/capstone"
        style="@style/portfolio_button_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:onClick="onButtonClicked"/>

</LinearLayout>
